--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,25 @@ body {
   background-color: #ffffff;
   font-style: normal;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
 li {
   list-style-type: none;
 }
