--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* ----global styles above---- */
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -16,8 +17,7 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 ul,
@@ -31,6 +31,41 @@ li {
   list-style-type: none;
 }
 
+img {
+  display: block;
+}
+
+/* common container settings*/
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* HEADER */
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -39,7 +74,11 @@ li {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  text-decoration: none;
+}
+
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
 }
 
 .logo .header-logo-text {
@@ -55,6 +94,15 @@ li {
   color: #404bbf;
 }
 
+.nav-link {
+  display: block;
+  padding: 24px 0;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+}
+
 .logo .footer-logo-text {
   color: #f4f4fd;
 }
@@ -63,56 +111,78 @@ li {
   color: #404bbf;
 }
 
-.link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  text-decoration: none;
-  font-style: normal;
-}
-
-.link:hover,
-.link:focus {
+.nav-link:hover,
+.nav-link:focus {
   color: #404bbf;
 }
 
-.contact-info {
-  letter-spacing: 0.02em;
+/* contact info */
+.contacts {
+  margin-left: auto;
+}
+
+.contacts-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.contacts-link {
+  padding: 24px 0;
+
   text-decoration: none;
   color: inherit;
   font-style: normal;
 }
 
-.contact-info:hover,
-.contact-info:focus {
+.contacts-link:hover,
+.contacts-link:focus {
   color: #404bbf;
 }
 
 /* HERO */
 .hero {
+  display: block;
+  height: 600px;
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 .hero-title {
+  width: 496px;
+  height: 120px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 48px;
   font-size: 56px;
   line-height: 1.07;
-  letter-spacing: 0.02em;
   text-align: center;
   color: #ffffff;
 }
 
 .button {
+  display: block;
+  width: 169px;
+  height: 56px;
+  margin-right: auto;
+  margin-left: auto;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
   letter-spacing: 0.04em;
   color: #ffffff;
   background-color: #4d5ae5;
+  border-radius: 4px;
+  border: none;
   cursor: pointer;
 }
 
 .button:hover,
 .button:focus {
   background-color: #404bbf;
+}
+
+/* FEATURES */
+
+.section-features {
+  padding: 120px 0;
 }
 
 .section-title {
@@ -124,12 +194,34 @@ li {
   color: #2e2f42;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
+}
+
+.features-item {
+  width: calc((100% - 72px) / 4);
 }
 
 .text {
@@ -138,6 +230,7 @@ li {
   letter-spacing: 0.02em;
   color: #434455;
 }
+
 /* OUR TEAM */
 
 .section-our-team {
@@ -156,5 +249,4 @@ li {
 
 .footer-text {
   color: #f4f4fd;
-  text-indent: 5px;
 }
